# kliamka

./: .dockerignore  .gitignore  Dockerfile.test  Makefile  README.md  VERSIONS.md  docker-compose.test.yml  mkdocs.yml  pyproject.toml  setup.py
.auto/: checks.sh  ideas.md  measure.sh  prompt.md
.github/workflows/: ci.yml  pages.yml  publish.yml
benchmark/: README.md  __init__.py  compare_results.py  comparison.py  conftest.py  run_benchmarks.py  test_benchmark.py
docs/: 20260408_product_requirements.md  20260710_api_reference.md  20260710_arguments_and_types.md  20260710_converters_and_validation.md  20260710_development.md  20260710_environment_variables.md  20260710_examples.md  20260710_getting_started.md  20260710_parser_customization.md  20260710_subcommands.md  20260710_troubleshooting.md  TODO.md  index.md
examples/: README.md  basic_usage.py  custom_converters.py  enums.py  env_vars.py  list_args.py  positional_args.py  subcommands.py
src/: __init__.py  kliamka.py
src/kliamka/: __init__.py  _converters.py  _core.py  _decorators.py  _helpers.py  _parser.py
tests/: __init__.py  conftest.py  test_benchmark_comparison.py  test_kliamka.py  test_packaging_smoke.py  test_plan_quality.py  test_regressions.py
