[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kliamka"
version = "0.4.0"
description = "Small Python CLI library"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Volodymyr Hotsyk", email = "git@hotsyk.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/hotsyk/kliamka"
Repository = "https://github.com/hotsyk/kliamka"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["kliamka"]

[tool.mypy]
python_version = "3.11"
strict = false

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
